Corrected header spacing.

--- a/mirocommunity_site/static/mirocommunity_site/css/screen.css
+++ b/mirocommunity_site/static/mirocommunity_site/css/screen.css
@@ -126,7 +126,7 @@ a:hover, a:active { outline: 0; }
 #header .logo { position: absolute; left: 10px; top: 30px; }
 
 /**  nav  **/
-.nav { float: left; margin: 0 0 0 342px;}
+.nav { float: right; margin: 0 114px 0 0;}
 .nav li { float: left; margin: 0  30px 0 0;}
 .nav li a { font-family: "HelveticaNeueRegular", Arial, Helvetica, sans-serif; font-size: 14px; color: #546784; line-height: 21px; text-decoration: none;}
 .nav li a:hover, .nav li a:focus , .nav li a.active { text-decoration: underline;} 
